2010-09-24  Aanjhan Ranganathan  <aanjhan@tuxmaniac.com>

	* src/8085-instructions.c: CMP instruction should not check and
	set S, P and AC flags as there is no result that is computed. It
	affects only C and Z flags. Hence removed most code in that
	function. Fixes bug LP: #579320.

	* src/8085-instructions.c: Fixed the long standing DAA
	bug. Followed http://www.ray.masmcode.com/BCDdaa.html plus had to
	ensure the addition operation on the accumulator must be done
	using the _eef_inst_func_add_i function so as to ensure setting of
	the carry and other flags. Fixes bug LP: #584093.

2010-09-18  Onkar Shinde  <onkarshinde@gmail.com>

	* src/gui-editor.[c,h]: Add variable to save current font. Add function
	to get current editor font.
	* src/interface.c, src/callbacks.[c,h]: Add ability to change editor 
	font. Thanks to Ramanathan for patch. Fixes bug LP: #579322.
	* po/ar.po, po/es.po: Updated translations from launchpad.
	* src/file-op.c, src/file-op-gio.c: Fix file not getting added to recent
	list when saving under different name.
	* src/callbacks.c: Update the memory and I/O views when doing resets.

2010-08-29  Onkar Shinde  <onkarshinde@gmail.com>

	* src/gui-list-message.c: Highlight the line containing error when
	selecting the error message from message pane. Fixes bug LP: #519834.
	* src/bridge.c: Clear all highlighting when assembling program.
	* doc/example/*.asm: Add copyright and license information to existing
	sample programs.
	* doc/examples/sorting.asm, doc/examples/sumofnumbers.asm: Add sample
	programs submitted by Kirantej.
	* installer.nsi.in: Use better (easily understandable) names for
	installers. Add new sample programs to the list of 'read only' files.

2010-08-25  Onkar Shinde  <onkarshinde@gmail.com>

	* README, TODO, doc/asm-guide.txt, doc/gnusim8085.1: Update website URL.
	* src/gui-editor.[c,h]: Add function to toggle display of line numbers.
	Add function to toggle mark at certain line. Add function to allow